# flutter_platform_channels_and_dart_native_interop

dart_ffi_with_c/: README.md  hello_world.dart  pubspec.yaml
dart_ffi_with_c/.dart_tool/: native_assets.yaml  package_config.json
dart_ffi_with_c/c_hello_library/: CMakeLists.txt  hello_world.c  hello_world.h
dart_ffigen/: README.md  ffigen.yaml  hello_world.dart  main.dart  pubspec.yaml
dart_ffigen/.dart_tool/: package_config.json
dart_ffigen/c_hello_library/: hello_world.h
dart_ffigen_native_assets/: README.md  ffigen.yaml  pubspec.yaml
dart_ffigen_native_assets/.dart_tool/: native_assets.yaml  package_config.json
dart_ffigen_native_assets/.dart_tool/native_assets_builder/c49c549bb646ff4511814bd684b5aabd/: config.json
dart_ffigen_native_assets/hook/: build.dart
dart_ffigen_native_assets/lib/: dart_ffigen_native_assets.dart  main.dart
dart_ffigen_native_assets/src/: CMakeLists.txt  dart_ffigen_native_assets.c
go_from_dart/: README.md  pubspec.yaml
go_from_dart/.dart_tool/: package_config.json
go_from_dart/lib/: main.dart
go_from_dart/src/: go.mod  hello_world.go  libhello_world.dylib  libhello_world.h
swift_from_dart/: README.md  ffigen.yaml  pubspec.yaml
swift_from_dart/.dart_tool/: package_config.json
swift_from_dart/lib/: main.dart  swift_hello_world_api_bindings.dart
swift_from_dart/src/: hello_world.h  hello_world.swift  libswifthelloworldapi.dylib
